--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
-# This file lists all contributors to the repository.
+John Doe <johndoe@gmail.com>
+Jane Doe <janedoe@gmail.com>
 
-Angel Oghenefuafo <angeloghenefuafo@gmail.com>
